     sensitive characters in strings
   - It is no longer necessary to open a shell for setting file permissions
   - Bug fix: Setting file permissions is no longer susceptible to race
     conditions
   - File permissions are only set when creating a new config file. So the user
     is able to change to less restrictive permissions if he/she wants to do
     this


Version 2.0.1
 * Small bug that prevented gnbuiff to be compiled in GNOME mode


Version 2.0.0
 * gnubiff now officially part of the GNU project
 * Complete redesign of interface inspired by MailNotification
   by Jean-Yves Lefort.
 * Automatic detection of mailbox format
 * New option to tell gnbuiff to never send passwords in clear
 * Better handling of SSL certificate
 * Various small bugfixes
 * Security fix in possible buffer overflow (pop3.c)
 * Security fix in pop3 (infinite uidl list would block gnubiff and
   ultimately crashes it)
 * Bugfix in geometry handling (was not saved properly)
 * Bugfix in pop3 protocol to really get only most recent headers
 * Bugfix in apop protocol which was really broken
 * Bugfix in imap4 to handle server panic
 * Bugfix in utf8 translation
 * Added hidden files in gtk_file_chooser's


Version 1.4.0
 * gnubiff now requires glib/gdk/gtk/libglade 2.4
 * Use of file chooser instead of file selector	
 * PNG simple animation support
 * Preview added when selecting images
 * Image/animation resizing with panel for GNOME version
 * Read mails are saved in configuration file
 * User can now choose text to be displayed when new mail and when no mail
 * Possibility to choose command to play sound
 * Possibility to choose popup background color (to make it flashy)
 * Possibility to hide image or/and text when no mail and when new mail
 * File protocol has been improved to speedup things
 * Security fix: table used for password encryption is now configurable
   using the --with-password-string making your .gnubiffrc dependent on